syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup;

service KeymanagerRegistraChavePixGrpcService {
  rpc registrar (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoDeChave {
  UNKNOWN_TIPO_DE_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta {
  UNKNOWN_TIPO_DE_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string idCliente = 1;
  string chave = 2;
  TipoDeChave tipoDeChave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string idPix = 1;
}